--- a/index.html
+++ b/index.html
@@ -19,9 +19,150 @@
             <div class="textos">
                 <h1 class="nombre">Café <span>"El Cafecito"</span></h1>
                 <h3>A quien madruga, un buen cafe le ayuda</h3>
-            </div>git add
+            </div>
         </div>
     </header>
 
+        <section class="main">
+        <section class="acerca-de" id="acerca-de">
+            <div class="contenedor">
+                <div class="foto">
+                    <img src="img/acerca-de.jpg" alt="">
+                </div>
+                <article>
+                    <h3>Acerca de</h3>
+                    <p>Bienvenido a la pagina web de mi restaurant,
+                    degusta de excelentes platillos, solo aqui.</p>
+                    <p>Ofrecemos la mejor calidad en cada una de nuestras creaciones
+                    gastronomicas, degusta siempre de lo mejor a cualquier hora del dia.
+                    Ven, conoce y atrvete a disfrutar de nuestro Menu.</p>
+                </article>
+            </div>
+        </section>
+
+        <section class="menu">
+            <div class="contenedor">
+                <h3 class="tiulo" id="platillos">Menu</h3>
+                <div class="contenedor-menu">
+                    <div class="contenedor-menu2">
+                        <article>
+                            <p class="categoria">De comer</p>
+                            <div class="platillo">
+                                <p class="nombre">Sopa de papa</p>
+                                <p class="precio">$20</p>
+                                <p class="descripcion">Platillo para degustar durante el
+                                desayuno.</p>
+                            </div>
+                            <div class="platillo">
+                                <p class="nombre">Chilaquiles</p>
+                                <p class="precio">$35</p>
+                                <p class="descripcion">Platillo para degustar durante el
+                                desayuno.</p>
+                            </div>
+                            <div class="platillo">
+                                <p class="nombre">Tostadas</p>
+                                <p class="precio">$25</p>
+                                <p class="descripcion">Platillo para degustar durante el
+                                desayuno.</p>
+                            </div>
+                            <div class="platillo">
+                                <p class="nombre">Fruta Picada</p>
+                                <p class="precio">$30</p>
+                                <p class="descripcion">Platillo para degustar durante el
+                                desayuno.</p>
+                            </div>
+                        </article>
+                    
+                        <article>
+                            <p class="categoria">De Tomar</p>
+                            <div class="platillo">
+                                <p class="nombre">Cafe de olla</p>
+                                <p class="precio">$10</p>
+                                <p class="descripcion">Bebida para degustar durante el
+                                desayuno.</p>
+                            </div>
+                            <div class="platillo">
+                                <p class="nombre">Cafe americano</p>
+                                <p class="precio">$25</p>
+                                <p class="descripcion">Bebida para degustar durante el
+                                desayuno.</p>
+                            </div>
+                            <div class="platillo">
+                                <p class="nombre">Jugo de Naranja</p>
+                                <p class="precio">$15</p>
+                                <p class="descripcion">Bebida para degustar durante el
+                                desayuno.</p>
+                            </div>
+                            <div class="platillo">
+                                <p class="nombre">Malteada</p>
+                                <p class="precio">$20</p>
+                                <p class="descripcion">Bebida para degustar durante el
+                                desayuno.</p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="galeria" id="galeria">
+            <div class="foto">
+                <img src="img/1.jpg" alt="">
+            </div>
+            <div class="foto">
+                <img src="img/2.jpg" alt="">
+            </div>
+            <div class="foto">
+                <img src="img/3.jpg" alt="">
+            </div>
+            <div class="foto">
+                <img src="img/4.jpg" alt="">
+            </div>
+            <div class="foto">
+                <img src="img/5.jpg" alt="">
+            </div>
+            <div class="foto">
+                <img src="img/6.jpg" alt="">
+            </div>
+            <div class="foto">
+                <img src="img/7.jpg" alt="">
+            </div>
+            <div class="foto">
+                <img src="img/8.jpg" alt="">
+            </div>
+        </section>
+
+        <section class="ubicacion" id="ubicacion">
+            <div class="contenedor">
+                <h3 class="titulo">Ubicacion</h3>
+                <div class="direccion">
+                    <p class="calle">2915 Primrose Lane<br />Anaheim, CA 92806</p>
+                    <p class="telefono">(503) 400-5479</p>
+                    <p class="correo">correo [arroba] tucorreo.com</p>
+                </div>
+
+                <div class="horarios">
+                    <h4>Horarios</h4>
+                    <p class="entre-semana">Lunes a Viernes <br> 8:00am - 9:00pm</p>
+                    <p class="fin-semana">Sabados y Domingos <br> 11:00am - 10:00pm</p>
+                </div>
+            </div>
+            </section>
+
+        <section class="mapa">
+            <iframe src=" http://maps.google.com/maps?saddr=(19.3780090%2C-97.8255480)&daddr=concepci%C3%B3
+            n%20Hidalgo%20altzayanca&geocode=FVmvJwEd9Ewr-g%3D%3D%3BFfH6JwEd714r-imdqpz41v_PhTEB8pPc5k8mbw%3D%3D&dirflg=d"
+            width="1600" height="550" frameborder="0" style="border:0"
+            allowfullscreen></iframe>
+        </section>
+    </section>
+
+    <footer>
+        <div class="contenedor">
+            <div class="copyright">
+                <p>Copyright Estefany Torres @ 2020</p>
+            </div>
+        </div> 
+    </footer>
 </body>
 </html>
