--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <div class="contenedor">
             <nav class="menu">
                 <a href="#" id="btn-acerca-de">Acerca de</a>
-                <a href="#" id="btn-menu">Menu</a>
+                <a href="#" id="btn-menu">Menù</a>
                 <a href="#" id="btn-galeria">Galeria</a>
-                <a href="#" id="btn-ubicacion">Ubicacion</a>
+                <a href="#" id="btn-ubicacion">Ubicaciòn</a>
             </nav>
-            <div class="textos">
+            <div class="textos"> 
                 <h1 class="nombre">Café <span>"El Cafecito"</span></h1>
                 <h3>A quien madruga, un buen cafe le ayuda</h3>
             </div>
@@ -164,5 +164,8 @@
             </div>
         </div> 
     </footer>
+
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/efectos.js"></script>
 </body>
 </html>
